--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,8 +30,8 @@ jobs:
       matrix:
         container:
         - wildfly
-        - open-liberty
-        #- payara # TODO Payara run with Microprofile support https://github.com/t1/problem-details/issues/25
+        #- open-liberty
+        - payara
         #- tomee # TODO TomEE enable when fixed https://github.com/t1/problem-details/issues/17
         jdk: [8, 11]
 
