--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
       matrix:
         container:
         - wildfly
-        #- open-liberty
+        - open-liberty
         - payara
         #- tomee # TODO TomEE enable when fixed https://github.com/t1/problem-details/issues/17
         jdk: [8, 11]
