--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,6 +3,34 @@ name: Java CI
 on: [push]
 
 jobs:
+  dump-contexts:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
+    - name: Dump job context
+      env:
+        JOB_CONTEXT: ${{ toJson(job) }}
+      run: echo "$JOB_CONTEXT"
+    - name: Dump steps context
+      env:
+        STEPS_CONTEXT: ${{ toJson(steps) }}
+      run: echo "$STEPS_CONTEXT"
+    - name: Dump runner context
+      env:
+        RUNNER_CONTEXT: ${{ toJson(runner) }}
+      run: echo "$RUNNER_CONTEXT"
+    - name: Dump strategy context
+      env:
+        STRATEGY_CONTEXT: ${{ toJson(strategy) }}
+      run: echo "$STRATEGY_CONTEXT"
+    - name: Dump matrix context
+      env:
+        MATRIX_CONTEXT: ${{ toJson(matrix) }}
+      run: echo "$MATRIX_CONTEXT"
+
   build-microprofile-artifacts:
     runs-on: ubuntu-latest
     steps:
@@ -29,11 +57,11 @@ jobs:
     strategy:
       matrix:
         container:
-        - wildfly
-        - open-liberty
+        #- wildfly
+        #- open-liberty
         - payara
         #- tomee # TODO TomEE enable when fixed https://github.com/t1/problem-details/issues/17
-        jdk: [8, 11]
+        jdk: [8] #, 11]
 
     runs-on: ubuntu-latest
     needs: build-microprofile-artifacts
