fix demo PriceService

--- a/demo/src/main/webapp/META-INF/microprofile-config.properties
+++ b/demo/src/main/webapp/META-INF/microprofile-config.properties
@@ -1,1 +1,1 @@
-com.github.t1.problemdetaildemoapp.DemoService$PriceService/mp-rest/url=http://localhost:8080/problem-details-jaxrs-demo
+com.github.t1.problemdetaildemoapp.PriceService/mp-rest/url=http://localhost:8080/problem-details-jaxrs-demo
