--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -81,4 +81,4 @@ jobs:
         name: mp-problemdetails
         path: /home/runner/.m2/repository/io/microprofile/sandbox/
     - name: Build with Maven
-      run: mvn --batch-mode verify -Djee-testcontainer=${{ matrix.container }}
+      run: mvn --batch-mode install -Djee-testcontainer=${{ matrix.container }}
