--- a/test-spring/pom.xml
+++ b/test-spring/pom.xml
@@ -5,8 +5,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
-        <relativePath /> <!-- lookup parent from repository -->
+        <version>2.4.3</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.github.t1</groupId>
@@ -82,6 +82,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
@@ -110,7 +114,7 @@
         </dependency>
     </dependencies>
 
-  <scm>
-    <tag>1.0.7-SNAPSHOT</tag>
-  </scm>
+    <scm>
+        <tag>1.0.7-SNAPSHOT</tag>
+    </scm>
 </project>
