--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.t1</groupId>
     <artifactId>problem-details</artifactId>
-    <version>1.0.7-SNAPSHOT</version>
+    <version>1.0.7</version>
     <packaging>pom</packaging>
     <description>Problem Details [RFC-7807] Java API, TCK, and implementations for JAX-RS and Spring Boot</description>
     <url>https://github.com/t1/problem-details</url>
@@ -47,7 +47,7 @@
     </licenses>
     <scm>
         <developerConnection>scm:git:https://github.com/t1/problem-details.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>1.0.7</tag>
         <url>https://github.com/t1/problem-details.git</url>
     </scm>
 
