--- a/ri-spring/pom.xml
+++ b/ri-spring/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.github.t1</groupId>
     <artifactId>problem-details-ri-spring</artifactId>
-    <version>1.0.7</version>
+    <version>1.0.8-SNAPSHOT</version>
     <description>Problem Detail implementation for Spring Boot</description>
 
     <properties>
@@ -49,12 +49,12 @@
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>problem-details-api</artifactId>
-            <version>1.0.7</version>
+            <version>1.0.8-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>problem-details-ri-lib</artifactId>
-            <version>1.0.7</version>
+            <version>1.0.8-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -83,6 +83,6 @@
     </dependencies>
 
     <scm>
-        <tag>1.0.7</tag>
+        <tag>1.0.7-SNAPSHOT</tag>
     </scm>
 </project>
