update dependencies to JEE 9

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -58,14 +58,14 @@
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
-            <version>8.0.0</version>
+            <version>${jee.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.microprofile</groupId>
             <artifactId>microprofile</artifactId>
             <type>pom</type>
-            <version>3.3</version>
+            <version>${microprofile.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -127,13 +127,7 @@
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>2.3.3</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate.validator</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>6.2.0.Final</version>
+            <version>${jaxb-runtime.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
