--- a/jaxrs/pom.xml
+++ b/jaxrs/pom.xml
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.eclipse.microprofile</groupId>
             <artifactId>microprofile</artifactId>
-            <version>3.3</version>
+            <version>${microprofile.version}</version>
             <type>pom</type>
             <scope>provided</scope>
         </dependency>
@@ -119,13 +119,13 @@
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>2.3.3</version>
+            <version>${jaxb-runtime.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
-            <version>1.0.7</version>
+            <version>${yasson.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
