--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,12 @@
 
         <mp-problem-details.version>1.0.0-SNAPSHOT</mp-problem-details.version>
 
+        <jee.version>9.0.0</jee.version>
+        <microprofile.version>4.0.1</microprofile.version>
         <lombok.version>1.18.18</lombok.version>
-        <resteasy.version>4.5.9.Final</resteasy.version>
+        <resteasy.version>4.6.0.Final</resteasy.version>
+        <yasson.version>2.0.1</yasson.version>
+        <jaxb-runtime.version>3.0.0</jaxb-runtime.version>
 
         <junit.version>5.7.1</junit.version>
         <assertj.version>3.19.0</assertj.version>
