--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -128,10 +128,16 @@
             <artifactId>problem-details-lib</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>javax.json.bind</groupId>
             <artifactId>javax.json.bind-api</artifactId>
@@ -140,7 +146,7 @@
         <dependency>
             <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
-            <version>1.0.7</version>
+            <version>2.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
